<resources>
    <string name="app_name">ThirtyForAndroid</string>
    <string name="thirty">Thirty</string>
    <string name="for_android">for Android</string>
    <string name="start_button">New game</string>
    <string name="rules_button">Rules</string>


    <string name="reroll_button">Reroll selected dice</string>
    <string name="reroll_text">Rerolls left:</string>

    <string name="calculate_button">Calculate score</string>
    <string name="score_text">Score this round:</string>

    <string name="low">Low</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="sevens">Sevens</string>
    <string name="eights">Eights</string>
    <string name="nines">Nines</string>
    <string name="tens">Tens</string>
    <string name="elevens">Elevens</string>
    <string name="twelves">Twelves</string>
    <string name="total">Total</string>

    <string-array name="rule_array">
        <item>@string/low</item>
        <item>@string/fours</item>
        <item>@string/fives</item>
        <item>@string/sixes</item>
        <item>@string/sevens</item>
        <item>@string/eights</item>
        <item>@string/nines</item>
        <item>@string/tens</item>
        <item>@string/elevens</item>
        <item>@string/twelves</item>
    </string-array>

    <string name="round_text">Round</string>
    <string name="round_button">Next round</string>
    <string name="round_button_score">Final score</string>

    <string name="dice_one">Dice One</string>
    <string name="dice_two">Dice Two</string>
    <string name="dice_three">Dice Three</string>
    <string name="dice_four">Dice Four</string>
    <string name="dice_five">Dice Five</string>
    <string name="dice_six">Dice Six</string>

    <string name="score_screen_rule_text">Rule</string>
    <string name="score_screen_score_text">Score</string>
    <string name="score_screen_final_score_text">Final score</string>

    <string name="rules_screen_title">Rules</string>
    <string name="rules_screen_text">The game is played in ten rounds.\nEach round six dice are thrown.\nEach round you may reroll any number of dice two times.\nYou score points by adding up the dice according to ten rules.\nAll rules except Low give points for combinations of dice that evenly add up to the rule’s number.\nLow give points for all dice three or lower.\nA rule can only be used once in a game, one for each round.\nWhen all ten rounds are over the final score is all round scores added up.\n</string>


</resources>
