<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/thirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <TextView
        android:id="@+id/for_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_android" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />

</LinearLayout>